# trade-app

./: .env.example  .gitignore  BEGINNER_GUIDE.md  COMPLETE.md  DAY_TRADING_STRATEGIES.md  NEWS_SIGNAL_INTEGRATION.md  PORTFOLIO_FEATURE.md  PORTFOLIO_GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  RUN_GUIDE.md  SWING_TRADING_TYPES.md  cli.py  portfolio.db  pyproject.toml  requirements.txt  run.sh  run_tests.py  setup.sh
config/: settings.py
dashboard/: __init__.py  app.py
dashboard/assets/: style.css
dashboard/components/: __init__.py  backtest_page.py  backtest_tab.py  backtest_widget.py  beginner_guide_page.py  charts.py  day_trading_page.py  market_overview.py  news_analysis.py  news_controller_page.py  portfolio_management.py  swing_trading_page.py  trading_signals.py  watchlist.py
models/: __init__.py  stock_data.py  trading_signal.py
services/: __init__.py  backtest_service.py  day_trading_strategies.py  gemini_service.py  market_data_service.py  portfolio_service.py  strategies.py  swing_trading_strategies.py  trading_strategy_service.py
services/signal_logic/: __init__.py  base.py  breakout.py  fibonacci.py  mean_reversion.py  momentum.py  orb.py  vwap.py
tests/: __init__.py  test_backtest_service.py  test_gemini_service.py  test_news_integration.py  test_portfolio_service.py  test_services.py  test_signal_logic.py  test_strategies_validation.py  test_trading_strategies.py
utils/: __init__.py  helpers.py  indicators.py
